CHANGES IN VERSION 1.8.0
------------------------

MINOR CHANGES

    o read_matrix(..., positions): added partial argument matching.

    o read_matrix(..., comment): allows for comments to be ignored in motif
      files.

    o General documentation cleanup.

CHANGES IN VERSION 1.6.3
------------------------

BUG FIXES

    o scan_sequences(): commented out WIP code for scanning gapped motifs.

CHANGES IN VERSION 1.6.2
------------------------

BUG FIXES

    o motif_tree(): 'daylight' layout is no longer disabled.

CHANGES IN VERSION 1.6.1
------------------------

BUG FIXES

    o summarise_motif(): properly retrieves altname slot. Contribution from
      Spencer Nystrom (https://github.com/bjmt/universalmotif/pull/9).

    o read_meme(): for LIKE type alphabets, make sure PROTEIN-LIKE is
      understood as being AA.

CHANGES IN VERSION 1.6.0
------------------------

NEW FEATURES

    o log_string_pval(): small utility function to obtain the log of
      string-formatted p-values (such as those often carried in
      MEME-formatted motifs which are smaller than R's double.xmin limit).
      Likely only a temporary solution.

    o view_motifs(..., return.raw) option: instead of returning a plot
      type object, return the aligned motif matrices.

    o view_motifs(..., dedup.names) option: allows plotting of motifs with
      duplicated names by appending a unique string.

    o merge_motifs(..., new.name) option: assign a name to the new merged motif
      instead of collapsing the names of the merged motifs together.

    o round_motif() utility: round down very low letter-position scores to
      zero.

MINOR CHANGES

    o Removed most previously deprecated function arguments.

    o Make sure view_motifs(..., use.type = "ICM") properly sets ylim.

    o create_motif(): single motif positions can now be created.

    o create_motif(), character input: nsites slot is left empty is input is