@@ -8,6 +8,11 @@ MINOR CHANGES
     o read_matrix(..., comment): allows for comments to be ignored in motif
       files.
 
+    o shuffle_sequences(), motif_pvalue(): the c++ random engine has been
+      changed from std::default_random_engine to std::mt19937. This should
+      allow for the same rng.seed value to result in the same output regardless
+      of OS.
+
     o General documentation cleanup.
 
 CHANGES IN VERSION 1.6.3
